fixed logo size but alert still  pops up behind the navbar when log in

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -26,9 +26,14 @@
   opacity: 1;
 }
 
-.logos_nav_bar {
+.logos_nav_bar1 {
 
   width: 158px;
+}
+
+.logos_nav_bar {
+
+  width: 40px;
 }
 
 .navbar-item {
